<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>nl.knaw.meertens.clariah.vre</groupId>
  <artifactId>recognizer</artifactId>
  <packaging>jar</packaging>
  <version>0.1-SNAPSHOT</version>
  <name>recognizer</name>

  <properties>
    <java.version>11</java.version>
    <main-class>nl.knaw.meertens.clariah.vre.recognizer.App</main-class>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
    <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
    <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
    <mavens-surefire-plugin.version>2.18.1</mavens-surefire-plugin.version>

    <activation.version>1.1.1</activation.version>
    <assertj-core.version>3.9.0</assertj-core.version>
    <commons-io.version>2.6</commons-io.version>
    <commons-lang.version>3.7</commons-lang.version>
    <guava.version>23.6-jre</guava.version>
    <jackson-databind.version>2.9.8</jackson-databind.version>
    <javax.activation.version>1.2.0</javax.activation.version>
    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
    <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
    <jaxb-core.version>2.3.0.1</jaxb-core.version>
    <jaxb-impl.version>2.4.0-b180830.0438</jaxb-impl.version>
    <jaxb2-maven-plugin.version>2.3.1</jaxb2-maven-plugin.version>
    <jaxb-xjc-jdk9.version>2.3.0</jaxb-xjc-jdk9.version>
    <json-path.version>2.3.0</json-path.version>
    <json-unit-fluent.version>1.28.1</json-unit-fluent.version>
    <junit.version>4.12</junit.version>
    <kafka.version>2.0.0</kafka.version>
    <kafka-clients.version>2.0.0</kafka-clients.version>
    <mockito.version>2.8.9</mockito.version>
    <mockito.version>2.21.0</mockito.version>
    <mockserver.version>5.4.1</mockserver.version>
    <powermock.version>1.7.1</powermock.version>
    <slf4j.version>1.7.5</slf4j.version>
    <unirest-java.version>1.4.9</unirest-java.version>
  </properties>
  <dependencies>

    <!-- testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj-core.version}</version>
    </dependency>
    <dependency>
      <groupId>com.jayway.jsonpath</groupId>
      <artifactId>json-path</artifactId>
      <version>${json-path.version}</version>
    </dependency>
    <dependency>
      <groupId>net.javacrumbs.json-unit</groupId>
      <artifactId>json-unit-fluent</artifactId>
      <version>${json-unit-fluent.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- mock server -->
    <dependency>
      <groupId>org.mock-server</groupId>
      <artifactId>mockserver-netty</artifactId>
      <version>${mockserver.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mock-server</groupId>
      <artifactId>mockserver-client-java</artifactId>
      <version>${mockserver.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- kafka -->
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka_2.12</artifactId>
      <version>${kafka.version}</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <artifactId>jmxri</artifactId>
          <groupId>com.sun.jmx</groupId>
        </exclusion>
        <exclusion>
          <artifactId>jms</artifactId>
          <groupId>javax.jms</groupId>
        </exclusion>
        <exclusion>
          <artifactId>jmxtools</artifactId>
          <groupId>com.sun.jdmk</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka-clients</artifactId>
      <version>${kafka-clients.version}</version>
    </dependency>

    <!-- jackson -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>

     <!-- logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.8.0-beta4</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.3.0-alpha4</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>1.3.0-alpha4</version>
    </dependency>

    <!-- util -->
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>com.mashape.unirest</groupId>
      <artifactId>unirest-java</artifactId>
      <version>${unirest-java.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang.version}</version>
    </dependency>

    <!-- jaxb, and other EE-modules -->
    <dependency>
      <groupId>com.sun.activation</groupId>
      <artifactId>javax.activation</artifactId>
      <version>${javax.activation.version}</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>${jaxb-impl.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>${jaxb-api.version}</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-core</artifactId>
      <version>${jaxb-core.version}</version>
    </dependency>

    <!-- fits mime type checking -->
    <dependency>
      <groupId>nl.mpi.tla</groupId>
      <artifactId>SaxonUtils</artifactId>
      <version>1.0-SNAPSHOT</version>
      <type>jar</type>
    </dependency>

  </dependencies>

  <!-- repositories containing saxon utils -->
  <repositories>
    <repository>
      <id>CLARIN</id>
      <name>CLARIN Repository</name>
      <url>https://nexus.clarin.eu/content/repositories/Clarin</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>CLARIN-Snapshot</id>
      <name>CLARIN Snapshot Repository</name>
      <url>https://nexus.clarin.eu/content/repositories/clarin-snapshot</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <build>
    <plugins>

      <!-- compile -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <fork>true</fork>
        </configuration>
      </plugin>

      <!-- checkstyle -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <executions>
          <execution>
            <id>checkstyle-compile</id>
            <phase>compile</phase>
            <configuration>
              <configLocation>https://raw.githubusercontent.com/HuygensING/checkstyle/master/checkstyle_config.xml</configLocation>
              <encoding>${project.build.sourceEncoding}</encoding>
              <consoleOutput>true</consoleOutput>
              <failsOnError>true</failsOnError>
              <!-- Excludes when package name contains 'generated': -->
              <excludes>**/generated/**/*</excludes>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <excludes>**/generated-sources/**/*</excludes>
        </configuration>
      </plugin>

      <!-- test -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${mavens-surefire-plugin.version}</version>
        <configuration>
          <!-- java modules -->
          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=permit</argLine>
          <forkMode>once</forkMode>
        </configuration>
      </plugin>

      <!-- build executable jar -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven-jar-plugin.version}</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>lib/</classpathPrefix>
              <mainClass>${main-class}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <mainClass>nl.knaw.meertens.clariah.vre.recognizer.App</mainClass>
            </manifest>
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>build-jar-with-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- generate sources -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jaxb2-maven-plugin</artifactId>
        <version>${jaxb2-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>xjc</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <generateEpisode>false</generateEpisode>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <packageName>nl.knaw.meertens.clariah.vre.recognizer.generated.fits.output</packageName>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-xjc</artifactId>
            <version>${jaxb-impl.version}</version>
          </dependency>
          <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-core</artifactId>
            <version>${jaxb-core.version}</version>
          </dependency>
          <dependency>
            <groupId>javax.activation</groupId>
            <artifactId>activation</artifactId>
            <version>${activation.version}</version>
          </dependency>
        </dependencies>
      </plugin>

    </plugins>
  </build>
</project>
